Removed cartItem margin-right to prevent extra espace on the last row item. Align center card without description.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -94,7 +94,6 @@ p{
     box-shadow: 0 0 6px 0px rgba(0, 0, 0,0.10);
     min-width: 225px;
     flex: 0 0 270px;
-    margin-right: 30px;
     border-radius: 6px;
     min-height: 180px;
 
@@ -114,6 +113,7 @@ p{
     text-align: center;
     padding: 20px;
     font-size: 20px;
+    margin: auto;
   }
   
   .cardsList__desc{
